--- a/index.html
+++ b/index.html
@@ -454,7 +454,19 @@ a {
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold">Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod congue nisi, nec consequat quam. In consectetur faucibus turpis eget laoreet. Sed nec imperdiet purus. </p>
+      	<p><span class="bold">Tôi đến từ thành phố Buôn Ma
+Thuột. Hiện tại đang học tập tại
+trường đại học Khoa học tự
+nhiên tpHCM, chuyên ngành
+Công nghệ thông tin. Ước mơ
+hiện tại của tôi là trở thành một
+Software developer. Điều đó đã
+khiến tôi không ngừng tìm tòi và
+học thêm những kiến thức mới,
+không chỉ kiến thức chuyên
+ngành mà cả kiến thức về cuộc
+sống để cải thiện bản thân mình
+hơn.</p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
@@ -465,7 +477,7 @@ a {
         <ul class="list-content"> <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
       		<li><a href="">@lecongluan</a></li> <!-- YOUR TWITTER USER  -->
       		<li><a href="">lecongluan</a></li> <!-- YOUR DRIBBBLE USER  -->
-      		<li><a href=""lecongluan</a></li> <!-- YOUR BEHANCE USER  -->
+      		<li><a href="">lecongluan</a></li> <!-- YOUR BEHANCE USER  -->
       	</ul>
       </div>
 		</div>
@@ -503,8 +515,8 @@ a {
       <div class="section-wrapper clearfix">
       	<h3 class="section-title">Skills</h3>  <!-- YOUR SET OF SKILLS  -->
         	<ul>
-        		<li class="skill-percentage">HTML / HTML5</li>
-        		<li class="skill-percentage">CSS / CSS3 / SASS / LESS</li>
+        		<li class="skill-percentage">HTML</li>
+        		<li class="skill-percentage">CSS</li>
         		<li class="skill-percentage">Javascript</li>
         	</ul>
         
